--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@
     padding: 0 15px 5px;
   }
 
+  .navbar-brand img{
+    width: 25%;
+  }
+
   .navbar-inverse .navbar-nav .active a,.navbar-inverse .navbar-nav .active a:focus, .navbar-inverse .navbar-nav .active a:hover{
     color: white;
     background-color: #5DC094;
@@ -25,10 +29,13 @@
 
   .navbar-inverse .navbar-nav li a{
     color: white;
+    font-size: 18pt;
   }
 
   .navbar-inverse .navbar-nav li a:hover{
-    color: #D5D5D5;
+    background-color: #268f65;
+    border-radius: 5px;
+    box-shadow: 2px #00613a;
   }
 
   .carousel img{
@@ -51,7 +58,7 @@
 
   .btn:hover{
     color: white;
-    background-color: gray/*dark colour*/;
+    background-color: #268f65;
     border: 2px solid;
   }
 
@@ -59,6 +66,15 @@
     margin: 4% auto;
     width: 100%;
     max-width: 100%;
+  }
+
+  @font-face{
+    font-family: typoRound;
+    src: url("Typo_Round_Regular_Demo.otf");
+  }
+
+  div{
+    font-family: typoRound;
   }
 
   .fa{
@@ -81,6 +97,10 @@
     background-color: #5DC094;
     color: white;
     padding: 1%;
+  }
+
+  footer h3, footer h4{
+    font-size: 18pt;
   }
 
   #hidden{
