--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@
     background-color: #268f65;
     border-radius: 5px;
     box-shadow: 2px #00613a;
+    color: white;
   }
 
   .carousel img{
@@ -49,7 +50,7 @@
   }
 
   .btn{
-    font-size: 18px;
+    font-size: 24px;
     color: #e6e7e8;
     padding: 12px 22px;
     background: #5DC094;
@@ -57,7 +58,7 @@
   }
 
   .btn:hover{
-    color: #e6e7e8;
+    color: white;
     background-color: #268f65;
     border: 2px solid;
   }
@@ -66,6 +67,10 @@
     margin: 4% auto;
     width: 100%;
     max-width: 100%;
+  }
+
+  .container h1{
+    text-align: center;
   }
 
   @font-face{
