--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
   }
 
   .navbar-brand{
@@ -78,7 +78,7 @@
     src: url("Typo_Round_Regular_Demo.otf");
   }
 
-  div{
+  html{
     font-family: typoRound;
   }
 
