--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@
     max-height: inherit;
   }
 
+  .navbar{
+    max-height: 80px;
+  }
+
   .navbar-inverse .navbar-nav .active a,.navbar-inverse .navbar-nav .active a:focus, .navbar-inverse .navbar-nav .active a:hover{
     color: #e6e7e8;
     background-color: #5DC094;
@@ -104,7 +108,7 @@
   }
 
   .main{
-    margin-top: 75px;
+    margin-top: 80px;
   }
 
   footer{
