--- a/style.css
+++ b/style.css
@@ -18,10 +18,6 @@
     padding: 0 15px 5px;
   }
 
-  .navbar-brand img{
-    max-height: inherit;
-  }
-
   .navbar{
     max-height: 80px;
   }
@@ -53,7 +49,7 @@
     text-transform: initial;
   }
 
-  .collapse .navbar-collapse{
+  .collapse{
     vertical-align: top;
   }
 
@@ -86,10 +82,7 @@
     src: url("Typo_Round_Regular_Demo.otf");
   }
 
-  html{
-    font-family: typoRound;
-  }
-  div{
+  html, div{
     font-family: typoRound;
   }
 
@@ -132,7 +125,7 @@
   }
 
   #logo{
-    max-width: 25%;
+    max-height: 60px;
   }
 
   @media (max-width: 600px){
