--- a/style.css
+++ b/style.css
@@ -22,10 +22,6 @@
     max-height: 80px;
   }
 
-  .navbar-header{
-    max-width: 200px;
-  }
-
   .navbar-inverse .navbar-nav .active a,.navbar-inverse .navbar-nav .active a:focus, .navbar-inverse .navbar-nav .active a:hover{
     color: #e6e7e8;
     background-color: #5DC094;
@@ -53,8 +49,9 @@
     text-transform: initial;
   }
 
-  .collapse{
+  .collapse.navbar-collapse{
     vertical-align: top;
+    max-height: 80px;
   }
 
   .btn{
