--- a/style.css
+++ b/style.css
@@ -1,149 +1,149 @@
+html, div{
+  font-family: typoRound;
+}
+
 .navbar{
-    background-color: #5DC094;
-    margin-bottom: 0;
-    border-radius: 0;
-    color: #e6e7e8;
-    padding: 1% 0;
-    font-size: 1.2em;
-    border: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 2;
-  }
+  background-color: #5DC094;
+  margin-bottom: 0;
+  border-radius: 0;
+  color: #e6e7e8;
+  padding: 1% 0;
+  font-size: 1.2em;
+  border: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+  max-height: 80px;
+}
 
-  .navbar-brand{
-    float: left;
-    min-height: 55px;
-    padding: 0 15px 5px;
-  }
+.navbar-brand{
+  float: left;
+  min-height: 55px;
+  padding: 0 15px 5px;
+}
 
-  .navbar{
-    max-height: 80px;
-  }
+.navbar-brand img{
+  max-height: 60px;
+}
 
-  .navbar-inverse .navbar-nav .active a,.navbar-inverse .navbar-nav .active a:focus, .navbar-inverse .navbar-nav .active a:hover{
-    color: #e6e7e8;
-    background-color: #5DC094;
-  }
+.collapse.navbar-collapse{
+  vertical-align: top;
+  max-height: 80px;
+}
 
-  .navbar-inverse .navbar-nav li a{
-    color: #e6e7e8;
-    font-size: 18pt;
-  }
+.navbar-inverse .navbar-nav .active a,.navbar-inverse .navbar-nav .active a:focus, .navbar-inverse .navbar-nav .active a:hover{
+  color: #e6e7e8;
+  background-color: #5DC094;
+}
 
-  .navbar-inverse .navbar-nav li a:hover{
-    background-color: #268f65;
-    border-radius: 5px;
-    box-shadow: 2px #00613a;
-    color: white;
-  }
+.navbar-inverse .navbar-nav li a{
+  color: #e6e7e8;
+  font-size: 18pt;
+}
 
-  .carousel img{
-    width: 100%;
-  }
+.navbar-inverse .navbar-nav li a:hover{
+  background-color: #268f65;
+  border-radius: 5px;
+  box-shadow: 2px #00613a;
+  color: white;
+  transition: .3s;
+}
 
-  .carousel-caption{
-    top: 50%;
-    transform: translateY(-50%);
-    text-transform: initial;
-  }
+.carousel img{
+  width: 100%;
+}
 
+.carousel-caption{
+  top: 50%;
+  transform: translateY(-50%);
+  text-transform: initial;
+}
+
+.btn{
+  font-size: 24px;
+  color: #e6e7e8;
+  padding: 12px 22px;
+  background: #5DC094;
+  border: 2px solid;
+}
+
+.btn:hover{
+  color: white;
+  background-color: #268f65;
+  border: 2px solid;
+  transition: .3s;
+}
+
+.container{
+  margin: 4% auto;
+  width: 100%;
+  max-width: 100%;
+}
+
+.container h1{
+  text-align: center;
+}
+
+@font-face{
+  font-family: typoRound;
+  src: url("Typo_Round_Regular_Demo.otf");
+}
+
+
+
+.fa{
+  padding: 15px;
+  font-size: 42px;
+  color: #e6e7e8;
+}
+
+.fa:hover{
+  background-color: #268f65;
+  border-radius: 5px;
+  box-shadow: 2px #00613a;
+  color: white;
+  text-decoration: none;
+  transition: .3s;
+}
+
+.main{
+  margin-top: 80px;
+}
+
+footer{
+  width: 100%;
+  background-color: #5DC094;
+  color: #e6e7e8;
+  padding: 1%;
+}
+
+footer h3, footer h4{
+  font-size: 18pt;
+}
+
+#icon{
+  max-width: 200px;
+  margin: 1% auto;
+}
+
+
+
+@media (max-width: 820px){
   .collapse.navbar-collapse{
-    vertical-align: top;
-    max-height: 80px;
+    display: none;
   }
-
-  .btn{
-    font-size: 24px;
-    color: #e6e7e8;
-    padding: 12px 22px;
-    background: #5DC094;
-    border: 2px solid;
+  .navbar-toggle{
+    display: inherit;
   }
-
-  .btn:hover{
-    color: white;
-    background-color: #268f65;
-    border: 2px solid;
+  .carousel-caption{
+    display: none;
   }
-
-  .container{
-    margin: 4% auto;
-    width: 100%;
-    max-width: 100%;
-  }
-
-  .container h1{
-    text-align: center;
-  }
-
-  @font-face{
-    font-family: typoRound;
-    src: url("Typo_Round_Regular_Demo.otf");
-  }
-
-  html, div{
-    font-family: typoRound;
-  }
-
-  .fa{
-    padding: 15px;
-    font-size: 42px;
-    color: #e6e7e8;
-  }
-
-  .fa:hover{
-    background-color: #268f65;
-    border-radius: 5px;
-    box-shadow: 2px #00613a;
-    color: white;
-    text-decoration: none;
-  }
-
-  .main{
-    margin-top: 80px;
-  }
-
-  footer{
-    width: 100%;
-    background-color: #5DC094;
-    color: #e6e7e8;
-    padding: 1%;
-  }
-
-  footer h3, footer h4{
-    font-size: 18pt;
-  }
-
-  #hidden{
-    background-color: gray;
-  }
-
   #icon{
-    max-width: 200px;
-    margin: 1% auto;
+    max-width: 150px;
   }
-
-  #logo{
-    max-height: 60px;
+  .fa{
+    font-size: 20px;
+    padding: 10px;
   }
-
-  @media (max-width: 820px){
-    .collapse.navbar-collapse{
-      display: none;
-    }
-    .navbar-toggle{
-      display: inherit;
-    }
-    .carousel-caption{
-      display: none;
-    }
-    #icon{
-      max-width: 150px;
-    }
-    .fa{
-      font-size: 20px;
-      padding: 10px;
-    }
-  }
+}
