--- a/style.less
+++ b/style.less
@@ -39,7 +39,6 @@ html, div{
 }
 
 .navbar-brand{
-	float: left;
 	min-height: 55px;
 	padding: 0 15px 5px;
 }
@@ -102,6 +101,12 @@ html, div{
 	h1{
 		text-align: center;
 	}
+}
+
+article{
+	background-color: @off-white;
+	border-radius: 5%;
+	box-shadow: 2em;
 }
 
 .fa{
