--- a/style.less
+++ b/style.less
@@ -13,9 +13,7 @@
 	src: url("Typo_Round_Regular_Demo.otf");
 }
 
-html, div{
-	font-family: typoRound;
-}
+html, div{font-family: typoRound;}
 
 .bg-green1{
 	background-color: @green1;
@@ -65,19 +63,13 @@ html, div{
 	}
 	
 	active a{
-		&:focus, &:hover{
-			.bg-green1;
-		}
+		&:focus, &:hover{.bg-green1;}
 	}
 }
 
-.main{
-	margin-top: 80px;
-}
+.main{margin-top: 80px;}
 
-.carousel img{
-	width: 100%;
-}
+.carousel img{width: 100%;}
 
 .carousel-caption{
 	top: 50%;
@@ -102,26 +94,18 @@ html, div{
 	width: 100%;
 	max-width: 100%;
 
-	h1{
-		text-align: center;
-	}
+	h1{text-align: center;}
 }
 
 article{
 	position: relative;
 	vertical-align: bottom;
 
-	a:hover{
-		text-decoration: none;
-	}
+	a:hover{text-decoration: none;}
 
-	article img{
-		width: 100%;
-	}
+	img{width: 100%;}
 
-	&:hover section{
-		opacity: 1;
-	}
+	&:hover section{opacity: 1;}
 
 	section{
 		text-align: center;
@@ -138,14 +122,16 @@ article{
 			background: linear-gradient(rgba(0,0,0,.5),rgba(12,12,12,.5));
 			padding-bottom: 10px;
 
+			span{font-size: 24px;}
+
+			.date{color: @green0;}
+
 			hr{
 				width: 35%;
 				margin: 0 auto;
 			}
-			
-			h4{
-				margin-bottom: 0;
-			}
+
+			h4{margin-bottom: 0;}
 		}
 	}
 }
@@ -168,10 +154,6 @@ footer{
 	width: 100%;
 	padding: 1%;
 
-	h3,h4{
-		font-size: 18pt;
-	}
-
 	.icon{
 	max-width: 200px;
 	margin: 1% auto;
@@ -179,20 +161,18 @@ footer{
 }
 
 @media (max-width: 820px){
-	.collapse.navbar-collapse{
-		display: none;
-	}
-	.navbar-toggle{
-		display: inherit;
-	}
-	.carousel-caption{
-		display: none;
-	}
+	.collapse.navbar-collapse{display: none;}
+	
+	.navbar-toggle{	display: inherit;}
+	
+	.carousel-caption{display: none;}
+
 	footer .icon{
 		max-width: 150px;
-	}
-	.fa{
-		font-size: 20px;
-		padding: 10px;
+
+		.fa{
+			font-size: 20px;
+			padding: 10px;
+		}
 	}
 }
