--- a/style.less
+++ b/style.less
@@ -38,11 +38,14 @@ html, div{font-family: typoRound;}
 	width: 100%;
 	z-index: 2;
 	max-height: 80px;
+
+	.container-fluid{padding-left: 2px;}
 }
 
 .navbar-brand{
 	min-height: 55px;
 	padding: 0 15px 5px;
+	float: left;
 }
 
 .collapse.navbar-collapse{
@@ -89,12 +92,14 @@ html, div{font-family: typoRound;}
 	}
 }
 
-.container{
+.container-fluid{
 	margin: 4% auto;
 	width: 100%;
 	max-width: 100%;
 
 	h1{text-align: center;}
+
+	.col-sm-4{padding: 0;}
 }
 
 article{
@@ -119,7 +124,7 @@ article{
 		transition: .25s ease-in;
 
 		.vignette{
-			background: linear-gradient(rgba(0,0,0,.5),rgba(12,12,12,.5));
+			background: linear-gradient(rgba(0,0,0,.5),rgba(18,18,18,.5));
 			padding-bottom: 10px;
 
 			span{font-size: 24px;}
