--- a/style.less
+++ b/style.less
@@ -13,7 +13,7 @@
 	src: url("Typo_Round_Regular_Demo.otf");
 }
 
-html, div{font-family: typoRound;}
+*{font-family: typoRound;}
 
 .bg-green1{
 	background-color: @green1;
@@ -44,7 +44,7 @@ html, div{font-family: typoRound;}
 
 .navbar-brand{
 	min-height: 55px;
-	padding: 0 15px 5px;
+	padding: 0 2px 2px 5px;
 	float: left;
 }
 
@@ -70,7 +70,19 @@ html, div{font-family: typoRound;}
 	}
 }
 
-.main{margin-top: 80px;}
+.main{
+	margin-top: 80px;
+
+	.container-fluid{
+		margin: 0 4%;
+		width: 100%;
+		max-width: 100%;
+
+		h1{text-align: center;}
+
+		.col-sm-4{padding: 0;}
+	}
+}
 
 .carousel img{width: 100%;}
 
@@ -90,16 +102,6 @@ html, div{font-family: typoRound;}
 		.bg-green2;
 		border: 2px solid;
 	}
-}
-
-.container-fluid{
-	margin: 4% auto;
-	width: 100%;
-	max-width: 100%;
-
-	h1{text-align: center;}
-
-	.col-sm-4{padding: 0;}
 }
 
 article{
@@ -141,6 +143,11 @@ article{
 	}
 }
 
+.count{
+	text-align: right;
+	color: #e6e7e8;
+}
+
 .fa{
 	padding: 15px;
 	font-size: 42px;
@@ -168,7 +175,9 @@ footer{
 @media (max-width: 820px){
 	.collapse.navbar-collapse{display: none;}
 	
-	.navbar-toggle{	display: inherit;}
+	.navbar-toggle{display: inherit;}
+
+	.main .container-fluid{margin: 0.5%;}
 	
 	.carousel-caption{display: none;}
 
