--- a/test.css
+++ b/test.css
@@ -49,7 +49,7 @@ article hr{
 	margin: 0 auto;
 }
 
-.col-sm-4{
+.col-12{
 	padding: 0;
 }
 
@@ -57,4 +57,22 @@ article hr{
 	float: left;
 	padding-left: 2px;
 	padding-right: 2px;
+}
+
+.flex-container{
+	padding: 0;
+	display: flex;
+	flex-flow: row wrap;
+}
+
+.flex-container article{
+	width: 33.3%;
+}
+
+@media(max-width: 992px){
+	.flex-container article{width: 50%;}
+}
+
+@media(max-width: 768px){
+	.flex-container article{width: 100%;}
 }
