--- a/style.less
+++ b/style.less
@@ -138,7 +138,10 @@ article{
 				margin: 0 auto;
 			}
 
-			h4{margin-bottom: 0;}
+			h4{
+				margin-bottom: 5;
+				margin-top: 0;
+			}
 		}
 	}
 }
