--- a/style.less
+++ b/style.less
@@ -104,43 +104,59 @@
 	}
 }
 
-article{
-	position: relative;
-	vertical-align: bottom;
+.grid{
+	background: @off-white;
 
-	a:hover{text-decoration: none;}
+	&:after{
+		content: '';
+		display: block;
+		clear: both;
+	}
 
-	img{width: 100%;}
+	article, .grid-sizer{width: 33.333%;}
 
-	&:hover section{opacity: 1;}
+	article{
+		position: relative;
+		vertical-align: bottom;
+		float: left;
 
-	section{
-		text-align: center;
-		color: white;
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		margin: 0 auto;
-		opacity: 0;
-		transition: .25s ease-in;
+		a:hover{text-decoration: none;}
 
-		.vignette{
-			background: linear-gradient(rgba(0,0,0,.5),rgba(18,18,18,.5));
-			padding-bottom: 10px;
+		img{
+			width: 100%;
+			display: block;
+		}
 
-			span{font-size: 24px;}
+		&:hover section{opacity: 1;}
 
-			.date{color: @green0;}
+		section{
+			text-align: center;
+			color: white;
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			margin: 0 auto;
+			opacity: 0;
+			transition: .25s ease-in;
 
-			hr{
-				width: 35%;
-				margin: 0 auto;
-			}
+			.vignette{
+				background: linear-gradient(rgba(0,0,0,.5),rgba(18,18,18,.5));
+				padding-bottom: 10px;
 
-			h4{
-				margin-bottom: 5;
-				margin-top: 0;
+				span{font-size: 24px;}
+
+				.date{color: @green0;}
+
+				hr{
+					width: 35%;
+					margin: 0 auto;
+				}
+
+				h4{
+					margin-bottom: 5;
+					margin-top: 0;
+				}
 			}
 		}
 	}
@@ -175,6 +191,10 @@ footer{
 	}
 }
 
+@media (max-width: 986px){
+	.grid{article, .grid-sizer{width: 50%;}}
+}
+
 @media (max-width: 820px){
 	.collapse.navbar-collapse{display: none;}
 	
@@ -192,4 +212,8 @@ footer{
 			padding: 10px;
 		}
 	}
+}
+
+@media (max-width: 768px){
+	.grid{article, .grid-sizer{width: 50%;}}
 }
