margin test fix

--- a/style.less
+++ b/style.less
@@ -76,7 +76,6 @@
 	.container-fluid{
 		margin: 0 4%;
 		width: 100%;
-		max-width: 100%;
 
 		h1{text-align: center;}
 
@@ -181,6 +180,7 @@
 }
 
 footer{
+	width: 100%;
 	margin: 0;
 
 	.bg-green1;
