--- a/style.less
+++ b/style.less
@@ -180,12 +180,12 @@
 }
 
 footer{
-	width: 100%;
 	margin: 0;
-
 	.bg-green1;
 	width: 100%;
 	padding: 1%;
+
+	.container-fluid{width: 100%;}
 
 	.icon{
 	max-width: 200px;
