moved article spawn to writeToFile.js, updated write.java

--- a/style.less
+++ b/style.less
@@ -51,6 +51,8 @@
 .collapse.navbar-collapse{
 	vertical-align: top;
 	max-height: 80px;
+
+	ul{padding-right: 5px;}
 }
 
 .navbar-inverse .navbar-nav{
@@ -74,7 +76,8 @@
 	margin-top: 80px;
 
 	.container-fluid{
-		margin: 0 4%;
+		margin: 0;;
+		padding: 0 4%;
 		width: 100%;
 
 		h1{text-align: center;}
@@ -184,8 +187,6 @@ footer{
 	.bg-green1;
 	width: 100%;
 	padding: 1%;
-
-	.container-fluid{width: 100%;}
 
 	.icon{
 	max-width: 200px;
