Revert "nav test patch, write.java fix"
This reverts commit 6baddac27b6a5cfe6e4234bf636b4dc4b051d5cb.

--- a/style.less
+++ b/style.less
@@ -33,6 +33,7 @@
 	padding: 1% 0;
 	font-size: 1.2em;
 	border: 0;
+	position: fixed;
 	top: 0;
 	width: 100%;
 	z-index: 2;
@@ -197,18 +198,12 @@ footer{
 	.grid{article, .grid-sizer{width: 50%;}}
 }
 
-@media (max-width: 768px){
-	.collapse.navbar-collapse{
-		display: none;
-
-		li{float: right;}
-	}
+@media (max-width: 820px){
+	.collapse.navbar-collapse{display: none;}
 	
 	.navbar-toggle{display: inherit;}
 
-	.main .container-fluid{padding: 0.5%;}
-
-	.grid{article, .grid-sizer{width: 50%;}}
+	.main .container-fluid{margin: 0.5%;}
 	
 	.carousel-caption{display: none;}
 
@@ -220,4 +215,8 @@ footer{
 			padding: 10px;
 		}
 	}
+}
+
+@media (max-width: 768px){
+	.grid{article, .grid-sizer{width: 50%;}}
 }
