--- a/style.less
+++ b/style.less
@@ -198,12 +198,14 @@ footer{
 	.grid{article, .grid-sizer{width: 50%;}}
 }
 
-@media (max-width: 820px){
+@media (max-width: 768px){
 	.collapse.navbar-collapse{display: none;}
 	
 	.navbar-toggle{display: inherit;}
 
-	.main .container-fluid{margin: 0.5%;}
+	.main .container-fluid{padding: 0.5%;}
+
+	.grid{article, .grid-sizer{width: 50%;}}
 	
 	.carousel-caption{display: none;}
 
@@ -215,8 +217,4 @@ footer{
 			padding: 10px;
 		}
 	}
-}
-
-@media (max-width: 768px){
-	.grid{article, .grid-sizer{width: 50%;}}
 }
