updated bootstrap, fa

--- a/style.less
+++ b/style.less
@@ -48,7 +48,7 @@
 	float: left;
 }
 
-.collapse.navbar-collapse{
+.collapse{
 	vertical-align: top;
 	max-height: 80px;
 
@@ -199,7 +199,7 @@ footer{
 }
 
 @media (max-width: 768px){
-	.collapse.navbar-collapse{display: none;}
+	.collapse{display: none;}
 	
 	.navbar-toggle{display: inherit;}
 
