--- a/style.less
+++ b/style.less
@@ -10,7 +10,7 @@
 
 @font-face{
 	font-family: typoRound;
-	src: url("Typo_Round_Regular_Demo.otf");
+	src: url("typoRound.otf");
 }
 
 *{font-family: typoRound;}
