carousel patch, font alt src

--- a/style.less
+++ b/style.less
@@ -11,6 +11,7 @@
 @font-face{
 	font-family: typoRound;
 	src: url("typoRound.otf");
+	src: url("Typo_Round_Regular_Demo.otf");
 }
 
 *{font-family: typoRound;}
