--- a/style.less
+++ b/style.less
@@ -57,14 +57,17 @@
 			padding-right: 5px;
 
 			li a{
+				.bg-green1;
 				color: @off-white;
 				font-size: 18pt;
 				float: right;
+				padding: 3px;
 		
 				&:hover{
 					.bg-green2;
 					border-radius: 5px;
 					box-shadow: 2px @green3;
+					text-decoration: none;
 				}
 
 				active a{
@@ -174,7 +177,7 @@
 	color: #e6e7e8;
 }
 
-.fa{
+.fab, .fas{
 	padding: 15px;
 	font-size: 42px;
 	color: @off-white;
