--- a/style.less
+++ b/style.less
@@ -30,15 +30,15 @@
 .navbar, .navbar-dark{
 	.bg-green1;
 	margin-bottom: 0;
-	border-radius: 0;
-	padding: 1% 0;
+	padding: 0;
 	font-size: 1.2em;
 	border: 0;
+	border-radius: 0;
 	position: fixed;
 	top: 0;
 	width: 100%;
 	z-index: 2;
-	max-height: 80px;
+	max-height: 70px;
 }
 
 .navbar{
@@ -48,31 +48,36 @@
 	float: left;
 	}
 
-	.collapse{
-		vertical-align: top;
-		max-height: 80px;
+	.navbar-toggler{
+		padding-right: 5px;
+	}
+}
+
+.collapse{
+	vertical-align: top;
+	max-height: 80px;
+	float: right;
+
+	.navbar-nav{
+		margin-top: 80px;
+		padding-right: 5px;
+
+		li a{
+			.bg-green1;
+			color: @off-white;
+			font-size: 24pt;
+			padding: 3px;
+			float: right;
 	
-		.navbar-nav{
-			margin-top: 80px;
-			padding-right: 5px;
+			&:hover{
+				.bg-green2;
+				border-radius: 5px;
+				box-shadow: 2px @green3;
+				text-decoration: none;
+			}
 
-			li a{
-				.bg-green1;
-				color: @off-white;
-				font-size: 18pt;
-				float: right;
-				padding: 3px;
-		
-				&:hover{
-					.bg-green2;
-					border-radius: 5px;
-					box-shadow: 2px @green3;
-					text-decoration: none;
-				}
-
-				active a{
-					&:focus, &:hover{.bg-green1;}
-				}
+			active a{
+				&:focus, &:hover{.bg-green1;}
 			}
 		}
 	}
