--- a/style.less
+++ b/style.less
@@ -48,8 +48,16 @@
 	float: left;
 	}
 
-	.navbar-toggler{
-		padding-right: 5px;
+	.btn{
+		margin: 5px 0 5px 5px;
+		padding: 0;
+		border: none;
+
+		&:active{
+			border: none;
+		}
+
+		&::after{display: none;}
 	}
 }
 
