--- a/style.less
+++ b/style.less
@@ -49,15 +49,23 @@
 	}
 
 	.btn{
-		margin: 5px 0 5px 5px;
-		padding: 0;
+		margin: 5px;
+		padding: 0 5px;
 		border: none;
 
-		&:active{
+		&:focus, &:hover{
 			border: none;
+			.bg-green2;
+			box-shadow: none;
 		}
 
 		&::after{display: none;}
+	}
+
+	.dropcown-menu{
+		background-color: rgba(256, 256, 256, 0);
+		padding: 0;
+		margin: 0;
 	}
 }
 
@@ -92,7 +100,19 @@
 }
 
 .main{
-	margin-top: 80px;
+	margin-top: 70px;
+
+	.btn{
+		.bg-green1;
+		font-size: 24px;
+		padding: 12px 22px;
+		border: 2px solid;
+	
+		&:hover{
+			.bg-green2;
+			border: 2px solid;
+		}
+	}
 
 	.carousel{
 		img{width: 100%;}
@@ -112,18 +132,6 @@
 		h1{text-align: center;}
 
 		.col-sm-4{padding: 0;}
-	}
-}
-
-.btn{
-	.bg-green1;
-	font-size: 24px;
-	padding: 12px 22px;
-	border: 2px solid;
-
-	&:hover{
-		.bg-green2;
-		border: 2px solid;
 	}
 }
 
@@ -191,7 +199,7 @@
 }
 
 .fab, .fas{
-	padding: 15px;
+	padding: 5px;
 	font-size: 42px;
 	color: @off-white;
 
