--- a/style.less
+++ b/style.less
@@ -77,7 +77,7 @@
 				font-size: 42px;
 
 				&:hover{
-					box-shadow: 2px @green3;
+					box-shadow: 2px 2px @green3;
 					text-decoration: none;
 				}
 			}
@@ -96,7 +96,7 @@
 				text-align: right;
 				float: right;
 				border-radius: 5px;
-				box-shadow: 2px @green3;
+				box-shadow: 2px 2px @green3;
 				width: min-content;
 				margin: 3px 0;
 				padding: 5px 20px;
@@ -104,10 +104,10 @@
 				.button;
 
 				&:nth-child(1){transition-delay: .1;}
-				&:nth-child(2){transition-delay: .1;}
-				&:nth-child(3){transition-delay: .1;}
-				&:nth-child(4){transition-delay: .1;}
-				&:nth-child(5){transition-delay: .1;}
+				&:nth-child(2){transition-delay: .2;}
+				&:nth-child(3){transition-delay: .3;}
+				&:nth-child(4){transition-delay: .4;}
+				&:nth-child(5){transition-delay: .5;}
 			}
 		}
 	}
@@ -225,7 +225,7 @@ footer{
 		&:hover{
 			.bg-green2;
 			border-radius: 5px;
-			box-shadow: 2px @green3;
+			box-shadow: 2px 2px @green3;
 			text-decoration: none;
 		}
 	}
