--- a/style.less
+++ b/style.less
@@ -48,7 +48,7 @@
 		top: 0;
 		width: 100%;
 		z-index: 2;
-		max-height: 70px;
+		height: 70px;
 	}
 
 	&-brand{
@@ -59,7 +59,6 @@
 
 	.dropdown{
 		.btn{
-			display: none;
 			.bg-green1;
 			margin: 6px;
 			padding: 0 5px;
@@ -84,12 +83,12 @@
 		}
 
 		&-menu{
-			display: inline;
 			background-color: rgba(256, 256, 256, 0);
 			padding: 0;
 			margin: 0;
 			border: 0;
 			transition: .3 ease;
+			width: min-content;
 
 			a{
 				font-size: 24pt;
@@ -97,7 +96,7 @@
 				float: right;
 				border-radius: 5px;
 				box-shadow: 2px 2px @green3;
-				width: min-content;
+				width: 152px;
 				margin: 3px 0;
 				padding: 5px 20px;
 
