--- a/style.less
+++ b/style.less
@@ -88,6 +88,9 @@
 			margin: 0;
 			border: 0;
 			width: min-content;
+			transition: all .3s ease;
+			-webkit-transition: all .3s ease;
+			display: block;
 
 			&:active a{
 				animation: drop .3s forwards;
