--- a/style.less
+++ b/style.less
@@ -100,15 +100,15 @@
 				width: 152px;
 				margin: 3px 6px 3px 0;
 				padding: 5px 20px;
-				transition: .3 ease;
+				transition: .3s ease;
 
 				.button;
 
-				&:nth-child(1){transition-delay: .1;}
-				&:nth-child(2){transition-delay: .2;}
-				&:nth-child(3){transition-delay: .3;}
-				&:nth-child(4){transition-delay: .4;}
-				&:nth-child(5){transition-delay: .5;}
+				&:nth-child(1){transition-delay: .1s;}
+				&:nth-child(2){transition-delay: .2s;}
+				&:nth-child(3){transition-delay: .3s;}
+				&:nth-child(4){transition-delay: .4s;}
+				&:nth-child(5){transition-delay: .5s;}
 			}
 
 			@keyframes drop {
@@ -148,6 +148,17 @@
 		margin: 0;;
 		padding: 0 4%;
 		width: 100%;
+
+		.button-group{
+			margin: 0 auto;
+
+			.button{
+				max-width: 50px;
+				img{
+					max-width: 50px;
+				}
+			}
+		}
 
 		h1{text-align: center;}
 
