--- a/style.less
+++ b/style.less
@@ -150,13 +150,21 @@
 		width: 100%;
 
 		.button-group{
-			margin: 0 auto;
+			text-align: center;
 
 			.button{
-				max-width: 50px;
+				padding: 6px;
+				border-radius: .25rem;
+
 				img{
 					max-width: 50px;
 				}
+
+				.fas{
+					width: 50px;
+				}
+
+				.fa-times, .fa-ellipsis-v{display: none;}
 			}
 		}
 
