--- a/style.less
+++ b/style.less
@@ -153,21 +153,21 @@
 			text-align: center;
 
 			.button{
-				height: 50px;
-				width: 50px;
+				height: 60px;
+				width: 60px;
 				padding: 0;
-				border-radius: .25rem;
+				border-radius: 1.25rem;
 
 				&:active, &.is-checked{.bg-green2;}
 
 				img{
 					max-width: 50px;
-					padding: 6px;
 				}
 
 				.fas{
 					width: 100%;
-					padding: 6px auto;
+					vertical-align: text-top;
+					font-size: 28pt;
 				}
 
 				.fa-times, .fa-ellipsis-v{display: none;}
