--- a/style.less
+++ b/style.less
@@ -151,12 +151,14 @@
 
 		.button-group{
 			text-align: center;
+			padding-bottom: 4px;
 
 			.button{
 				height: 60px;
 				width: 60px;
 				padding: 0;
 				border-radius: 1.25rem;
+				vertical-align: middle;
 
 				&:active, &.is-checked{.bg-green2;}
 
