--- a/style.less
+++ b/style.less
@@ -10,7 +10,7 @@
 
 @font-face{
 	font-family: typoRound;
-	src: url("typoRound.otf");
+	src: url("typoRound.ttf");
 	src: url("Typo_Round_Regular_Demo.otf");
 }
 
@@ -159,8 +159,23 @@
 				padding: 0;
 				border-radius: 1.25rem;
 				vertical-align: middle;
+				outline: none;
 
-				&:active, &.is-checked{.bg-green2;}
+				&.is-checked{
+					& .fa-home{
+						display: initial
+					}
+
+					& .fa-times{
+						display: none;
+					}
+				}
+
+				&:active, &.is-checked{
+					.bg-green2;
+					
+					img{color: white;}
+				}
 
 				img{
 					max-width: 50px;
@@ -172,7 +187,8 @@
 					font-size: 28pt;
 				}
 
-				.fa-times, .fa-ellipsis-v{display: none;}
+				.fa-times{display: initial;}
+				.fa-home, .fa-ellipsis-v{display: none;}
 			}
 		}
 
