--- a/style.less
+++ b/style.less
@@ -187,7 +187,11 @@
 					font-size: 28pt;
 				}
 
-				.fa-times{display: initial;}
+				.fa-times{
+					display: initial;
+					font-size: 32pt;
+				}
+
 				.fa-home, .fa-ellipsis-v{display: none;}
 			}
 		}
@@ -241,7 +245,6 @@
 
 			.vignette{
 				background: linear-gradient(rgba(0,0,0,.35),rgba(36,36,36,.35));
-				padding-bottom: 10px;
 
 				span{font-size: 24px;}
 
