--- a/style.less
+++ b/style.less
@@ -145,8 +145,8 @@
  }
 
 	.container-fluid{
-		margin: 0;;
-		padding: 0 4%;
+		margin: 0;
+		padding: 0;
 		width: 100%;
 
 		.button-group{
@@ -160,7 +160,7 @@
 				border-radius: 1.25rem;
 				vertical-align: middle;
 				outline: none;
-
+				
 				&.is-checked{
 					& .fa-home{
 						display: initial
@@ -173,6 +173,7 @@
 
 				&:active, &.is-checked{
 					.bg-green2;
+					box-shadow: 2px 2px @green3;
 					
 					img{color: white;}
 				}
