jquery slim test

--- a/style.less
+++ b/style.less
@@ -280,15 +280,13 @@ footer{
 	}
 
 	.fab{
+		.button;
 		padding: 6px;
 		font-size: 42pt;
-		color: @off-white;
 		margin: 5px;
 	
 		&:hover{
-			.bg-green2;
 			border-radius: 5px;
-			box-shadow: 2px 2px @green3;
 			text-decoration: none;
 		}
 	}
