--- a/style.less
+++ b/style.less
@@ -30,8 +30,8 @@
 .button{
 	transition: .1s;
 	.bg-green1;
-		font-size: 24pt;
-		border: 2px solid;
+	font-size: 24pt;
+	border: 2px solid;
 	
 	&:hover{
 		.bg-green2;
@@ -161,13 +161,13 @@
 			padding-bottom: 4px;
 
 			button{
+				.button;
 				height: 60px;
 				width: 60px;
 				padding: 0;
 				border-radius: 1.25rem;
 				vertical-align: middle;
 				outline: none;
-				.button
 				
 				&.is-checked{
 					& .fa-home{display: initial}
@@ -281,7 +281,7 @@ footer{
 
 	.fab{
 		.button;
-		border: none;
+		border: none !important;
 		padding: 6px;
 		font-size: 42pt;
 		margin: 5px;
