--- a/style.less
+++ b/style.less
@@ -39,8 +39,10 @@
 	}
 
 	&:active{
+		.bg-green2;
 		transform: translateY(4px) translateX(2px);
 		box-shadow: none;
+		&:focus{box-shadow: none;}
 	}
 }
 
