new otf, sidbear 17

--- a/style.less
+++ b/style.less
@@ -10,7 +10,7 @@
 
 @font-face{
 	font-family: typoRound;
-	src: url("typoRound.ttf") format('embedded-opentype');
+	src: url("typoRound.otf") format('embedded-opentype');
 	src: url("Typo_Round_Regular_Demo.otf");
 }
 
