font fix, sidebar fixed

--- a/style.less
+++ b/style.less
@@ -10,8 +10,7 @@
 
 @font-face{
 	font-family: typoRound;
-	src: url("typoRound.otf") format('embedded-opentype');
-	src: url("Typo_Round_Regular_Demo.otf");
+	src: url("typoRound.otf");
 }
 
 *{font-family: typoRound;}
@@ -207,7 +206,7 @@
 
 
 		.side-bar{
-			position: sticky;
+			position: fixed;
 			top: 100px;
 			padding: 0;
 
