--- a/style.less
+++ b/style.less
@@ -206,8 +206,9 @@
 
 
 		.side-bar{
-			position: fixed;
-			top: 100px;
+			position: sticky;
+			right: 0;
+			bottom: 1000px;
 			padding: 0;
 
 			article, .grid-sizer{width: 100%;}
