--- a/style.less
+++ b/style.less
@@ -206,9 +206,9 @@
 
 
 		.side-bar{
-			position: sticky;
+			position: fixed;
 			right: 0;
-			bottom: 1000px;
+			top: 10%;
 			padding: 0;
 
 			article, .grid-sizer{width: 100%;}
@@ -314,7 +314,11 @@ footer{
 	
 	.dropdown-toggle{display: inherit;}
 
-	.main .container-fluid{padding: 0.5%;}
+	.main .container-fluid{
+		padding: 0.5%;
+	
+		.side-bar{position: relative;}
+	}
 
 	.grid{article, &-sizer{width: 100%;}}
 	
