--- a/test.css
+++ b/test.css
@@ -1,8 +1,4 @@
-#carousel-custom {
-	margin-top:  10px;
-	width: 100%;
-}
-#carousel-custom .carousel-indicators {
+#highlights .carousel-indicators {
 	margin: 10px 0 0;
 	overflow: auto;
 	position: static;
@@ -10,7 +6,7 @@
 	white-space: nowrap;
 	width: 100%;
 }
-#carousel-custom .carousel-indicators li {
+#highlights .carousel-indicators li {
 	background-color: transparent;
 	-webkit-border-radius: 0;
 	border-radius: 0;
@@ -19,16 +15,16 @@
 	margin: 0 !important;
 	width: auto;
 }
-#carousel-custom .carousel-indicators li img {
+#highlights .carousel-indicators li img {
 	display: block;
 	opacity: 0.5;
 }
-#carousel-custom .carousel-indicators li.active img {
+#highlights .carousel-indicators li.active img {
 	opacity: 1;
 }
-#carousel-custom .carousel-indicators li:hover img {
+#highlights .carousel-indicators li:hover img {
 	opacity: 0.75;
 }
-#carousel-custom .carousel-outer {
+#highlights .carousel-outer {
 	position: relative;
 }
