--- a/style.less
+++ b/style.less
@@ -151,6 +151,29 @@
 		 transform: translateY(-50%);
 		 text-transform: initial;
 	 }
+
+	 .carousel-indicators{
+		margin: 0;
+		position: static;
+		text-align: left;
+		width: 100%;
+
+		li {
+			background-color: transparent;
+			height: auto;
+			margin: 0 !important;
+			width: auto;
+
+			img {
+				display: block;
+				opacity: 0.5;
+
+				&:active{opacity: 1;}
+
+				&:hover{opacity: .75;}
+			}
+		}
+	 }
  }
 
 	.container-fluid{
