--- a/style.less
+++ b/style.less
@@ -229,10 +229,12 @@
 
 
 		.side-bar{
-			position: fixed;
-			right: 0;
-			top: 10%;
 			padding: 0;
+
+			.sticky{
+				position: sticky;
+				bottom: 10px;
+			}
 
 			article, .grid-sizer{width: 100%;}
 		}
