--- a/style.less
+++ b/style.less
@@ -112,11 +112,11 @@
 
 			.button;
 
-			&:nth-child(1){transition-delay: .1s;}
-			&:nth-child(2){transition-delay: .2s;}
-			&:nth-child(3){transition-delay: .3s;}
-			&:nth-child(4){transition-delay: .4s;}
-			&:nth-child(5){transition-delay: .5s;}
+			// &:nth-child(1){transition-delay: .1s;}
+			// &:nth-child(2){transition-delay: .2s;}
+			// &:nth-child(3){transition-delay: .3s;}
+			// &:nth-child(4){transition-delay: .4s;}
+			// &:nth-child(5){transition-delay: .5s;}
 		}
 
 		@keyframes drop {
