--- a/style.less
+++ b/style.less
@@ -97,8 +97,9 @@
 			a{
 				padding: 0 .6rem;
 				color: @off-white;
+				text-decoration: none;
 
-				&:hover{color: white;}
+				&:hover, &:active, &focus{color: white;}
 			}
 		}
 		.show &, .collapsing &{
