--- a/style.less
+++ b/style.less
@@ -91,9 +91,7 @@
 	}
 
 	&-nav{
-
 		li{
-
 			a{
 				padding: 0 .6rem;
 				color: @off-white;
@@ -102,6 +100,19 @@
 				&:hover, &:active, &focus{color: white;}
 			}
 		}
+
+		.collapsing &{
+			li{
+				
+
+				&:nth-child(1){transition-delay: .1s;}
+				&:nth-child(2){transition-delay: .2s;}
+				&:nth-child(3){transition-delay: .3s;}
+				&:nth-child(4){transition-delay: .4s;}
+				&:nth-child(5){transition-delay: .5s;}
+			}
+		}
+
 		.show &, .collapsing &{
 			background-color: rgba(256, 256, 256, 0);
 			padding: 0;
@@ -124,16 +135,7 @@
 
 				.button;
 
-				// &:nth-child(1){transition-delay: .1s;}
-				// &:nth-child(2){transition-delay: .2s;}
-				// &:nth-child(3){transition-delay: .3s;}
-				// &:nth-child(4){transition-delay: .4s;}
-				// &:nth-child(5){transition-delay: .5s;}
-
-				a{
-					padding: 0;
-				}
-
+				a{padding: 0;}
 			}
 		}
 	}
