--- a/style.less
+++ b/style.less
@@ -92,6 +92,7 @@
 
 	&-nav{
 		li{
+			transform: translateX(100%);
 			a{
 				padding: 0 .6rem;
 				color: @off-white;
@@ -103,7 +104,7 @@
 
 		.collapsing &{
 			li{
-				
+				transform: translateX(-100%);
 
 				&:nth-child(1){transition-delay: .1s;}
 				&:nth-child(2){transition-delay: .2s;}
@@ -119,8 +120,7 @@
 			margin: 0;
 			border: 0;
 			width: min-content;
-			transition: all .3s ease;
-			-webkit-transition: all .3s ease;
+			transition: .3s ease;
 
 			li{
 				font-size: 24pt;
@@ -131,9 +131,8 @@
 				width: 152px;
 				margin: 3px 6px 3px 0;
 				padding: 5px 20px;
-				transition: .3s ease;
-
 				.button;
+				transition: .3s ease;
 
 				a{padding: 0;}
 			}
